# discord-lite

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md
.github/workflows/: rust.yml
src/: api.rs  main.rs  state.rs  ui.rs
